--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ NEXT_PUBLIC_FIREBASE_PROJECT_ID="YOUR-KEY"
 NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET="YOUR-KEY"
 NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID="YOUR-KEY"
 NEXT_PUBLIC_FIREBASE_APP_ID="YOUR-KEY"
+"YOUR FIREBASE API"
