--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-NEXT_PUBLIC_FIREBASE_API_KEY="AIzaSyDfiePAJFZ6iZa2i-zxZ1utK_OwW4jrn4A"
-NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN="tiktok-clone-el.firebaseapp.com"
-NEXT_PUBLIC_FIREBASE_PROJECT_ID="tiktok-clone-el"
-NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET="tiktok-clone-el.appspot.com"
-NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID="1002601379014"
-NEXT_PUBLIC_FIREBASE_APP_ID="1:1002601379014:web:818b9c6356057b4cd853c7"
+NEXT_PUBLIC_FIREBASE_API_KEY="YOUR-KEY"
+NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN="Your-Key"
+NEXT_PUBLIC_FIREBASE_PROJECT_ID="Your-Key"
+NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET="Your-Key"
+NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID="Your-Key"
+NEXT_PUBLIC_FIREBASE_APP_ID="Your-Key"
