--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,11 @@
 .pnp.js
 .yarn/install-state.gz
 
+#enviroment
+/.env
+/env
+.env
+
 # testing
 /coverage
 
@@ -34,5 +39,3 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
-
-.vercel
